# Embree-CGES

./: .gitignore  CGES.sln  LICENSE  README.md  embree_intro_en.md  install.sh  install_dependencies.ps1  uninstall.sh
.github/workflows/: autobuild.yml
CGES/: .clang-format  .gitignore  CGES.vcxproj  CGES.vcxproj.filters  CMakeLists.txt  note.md  packages.config  qiita1.md
CGES/src/: Camera.cpp  Camera.hpp  brdf.cpp  brdf.hpp  bufferelements.hpp  color.hpp  constants.hpp  game_object.cpp  game_object.hpp  gameobject_base.cpp  gameobject_base.hpp  gameobject_emittable.cpp  gameobject_emittable.hpp  gameobject_plane.cpp  gameobject_plane.hpp  gameobject_polygonalmesh.cpp  gameobject_polygonalmesh.hpp  gameobject_sphere.cpp  gameobject_sphere.hpp  gl_engine.cpp  gl_engine.hpp  glengine.cpp  glengine.hpp  light_source.hpp  main.cpp  material_base.hpp  material_lambertian.cpp  material_lambertian.hpp  material_refraction.cpp  material_refraction.hpp  material_specular.cpp  material_specular.hpp  multithread_mutexrenderprogress.cpp  multithread_mutexrenderprogress.hpp  multithread_scheduler.cpp  multithread_scheduler.hpp  object.hpp  operators.cpp  operators.hpp  pm_photon.cpp  (+45 more)
LICENSE_libraries/: LICENSE_STBLibrary
QiitaSandbox/: QiitaSandbox.vcxproj  QiitaSandbox.vcxproj.filters  qiita1.md  result.ppm  result2.ppm
QiitaSandbox/src/: main.cpp
Sandbox/: Sandbox.vcxproj  main.cpp
